src/flavors/cycle3/static/css/custom.css
/* ... */
.place-location_type-option-description {
  position: sticky;
  top: 0;
  z-index: 10000;
  background-color: var(--attention-bg);
  color: var(--attention-fg);
}

@media (hover: hover) and (width >=1024px) {
  .hidden-if-no-hover {
    display: revert;
  }

  .place-location_type-option-description-hover-wrapper {
    position: relative;
  }

  .tooltip-content {
    position: absolute;
    display: none;
    box-sizing: border-box;
    left: 0;
    width: 100%;
  }

  .tooltip-icon:hover+.tooltip-content {
    display: block;
  }
}

@media (hover: none) {
  .hidden-if-no-hover {
    display: none;
  }
}

/*~~~~~~~~~~~~~~~~~~~~*/

.place-location_type-option-description-hover-wrapper {
  position: relative;
  z-index: 10000;
}


.place-location_type-option-description .instructions {
  background-color: var(--instructions-bg);
  color: var(--instructions-fg);
  padding: 0.5rem;
  font-style: italic;
}

.category-description {
  background-color: var(--attention-bg);
  color: var(--attention-fg);
  padding: 0.5rem;
}

.category-description-label {
  font-weight: bold;
}

.category-description-label::after {
  content: ':';
}

.category-description-hovered {
  position: absolute;
  width: 100%;
  margin: 0.5rem 0;
  box-sizing: border-box;
  border: 1px solid var(--iia-dark-blue);
  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
}

.if-hoverable {
  display: none;
}

@media (hover: hover) and (width >=1024px) {
  .if-hoverable {
    display: block;
  }

  .if-not-hoverable {
    display: none;
  }
}

.if-hoverable.hidden,
.if-not-hoverable.hidden {
  display: none;
}

.place-submission-confirmation {
  background-color: var(--instructions-bg);
  color: var(--instructions-fg);
  text-align: left;
}

.place-submission-confirmation h3 {
  font-size: 1em;
}

/* =Place detail
-------------------------------------------------------------- */

.place-label {
  font-family: var(--header-font);
  font-weight: bold;
  font-size: 0.75rem;
  text-transform: uppercase;
}

.point-submitter .avatar {
  height: auto;
}

.place-submission-confirmation a {
  color: var(--instructions-fg);
  text-decoration: underline;
}

/* =Ticker
-------------------------------------------------------------- */

#ticker {
  background-color: var(--iia-dark-blue);
}

.recent-points a,
.recent-points a:active,
.recent-points a:visited {
  color: white;
  padding-left: 4rem;
  border-color: transparent;
  transition: background-color 0.1s, border-color 0.1s;
}

.recent-points a:hover {
  color: var(--hover-fg);
  background: var(--hover-bg);
  border-color: var(--hover-bg);
}

.recent-points .avatar {
  width: 3rem;
  height: 3rem;
  margin-left: -3.5rem;
}

.place-title {
  font-weight: bold;
}

.activity-filters {
  display: flex;
  justify-content: center;
  align-items: stretch;
  position: sticky;
  top: 0;
  z-index: 1;
}

.activity-filters .display-choice {
  position: relative;
  width: 100%;
  min-height: 2rem;
}

.activity-filters .display-choice input[type="radio"] {
  position: absolute;
  opacity: 0;
}

.activity-filters .display-choice label {
  display: flex;
  align-items: center;
  justify-content: center;
  box-sizing: border-box;
  padding: 0.5rem;
  width: 100%;
  height: 100%;
  background-color: white;
  color: var(--iia-dark-blue);
  font-weight: normal;
  text-align: center;
  border: 2px solid transparent;
}

.activity-filters .display-choice label:hover {
  cursor: pointer;
  color: var(--content-link-hover);
  border-style: dashed;
  border-color: var(--content-link-hover);
}

.activity-filters .display-choice input[type="radio"]:checked+label {
  background-color: var(--iia-dark-blue);
  color: white;
  font-weight: bold;
  text-decoration: underline;
  border-color: transparent;
  border-style: solid;
  cursor: default;
}

/* =Colophon
-------------------------------------------------------------- */

#colophon {
  background-color: var(--iia-dark-blue);
}

#colophon .poepublic-logo {
  font-family: "Helvetica Neue", Helvetica, sans-serif !important;
}

/* =Language picker
-------------------------------------------------------------- */

@keyframes rotateWord {
  0% {
    opacity: 0;
  }

  1% {
    opacity: 0;
    transform: translateY(-30px);
  }

  4.17% {
    opacity: 1;
    transform: translateY(0px);
  }

  /* This percentage of the total time should come out to about 1 second */
  12.5% {
    opacity: 1;
    transform: translateY(0px);
  }

  /* This percentage of the total time should come out to about 3 seconds */
  15.67% {
    opacity: 0;
    transform: translateY(30px);
  }

  100% {
    opacity: 0;
  }
}

.btn-language__carousel {
  position: relative;
  display: flex;
  min-width: 7.5rem;
  align-items: center;
}

.btn-language__carousel span {
  position: absolute;
  right: 0;
  opacity: 0;
  overflow: hidden;
  box-sizing: border-box;
  width: max-content;

  animation: rotateWord 24s linear infinite 0s;
  /* This is 3 times the number of languages */
}

/* There should be times from 3 up to (N-1) * 3 seconds, where N is the number of languages */
.btn-language__carousel span:nth-child(2) {
  animation-delay: 3s;
}

.btn-language__carousel span:nth-child(3) {
  animation-delay: 6s;
}

.btn-language__carousel span:nth-child(4) {
  animation-delay: 9s;
}

.btn-language__carousel span:nth-child(5) {
  animation-delay: 12s;
}

.btn-language__carousel span:nth-child(6) {
  animation-delay: 15s;
}

.btn-language__carousel span:nth-child(7) {
  animation-delay: 18s;
}

.btn-language__carousel span:nth-child(8) {
  animation-delay: 21s;
}
/* ... */

